refactor(Views): make Calendar control ReadOnly

--- a/Views/CheckInOutView.axaml
+++ b/Views/CheckInOutView.axaml
@@ -74,6 +74,7 @@
                                     VerticalAlignment="Top"
                                     Margin="0,-2"
                                     shadui:ControlAssist.Label="Date Today"
+                                    shadui:ControlAssist.ReadOnly="True"
                                     SelectedDate="{CompiledBinding SelectedDate}"
                                     IsEnabled="True" />
                                 <Button
@@ -240,6 +241,7 @@
                                     VerticalAlignment="Top"
                                     Margin="0,-2"
                                     shadui:ControlAssist.Label="Date Today"
+                                    shadui:ControlAssist.ReadOnly="True"
                                     SelectedDate="{CompiledBinding SelectedDate}"
                                     IsEnabled="True" />
                                 <Button
