--- a/Views/ManageBillingView.axaml
+++ b/Views/ManageBillingView.axaml
@@ -78,6 +78,7 @@
                                                     HorizontalAlignment="Right"
                                                     Margin="0,-20"
                                                     shadui:ControlAssist.Label="Date Today"
+                                                    shadui:ControlAssist.ReadOnly="True"
                                                     SelectedDate="{x:Static system:DateTime.Today}"
                                                     IsEnabled="False" />
                                             </Grid>
@@ -198,6 +199,7 @@
                                                     HorizontalAlignment="Right"
                                                     Margin="0,-20"
                                                     shadui:ControlAssist.Label="Date Today"
+                                                    shadui:ControlAssist.ReadOnly="True"
                                                     SelectedDate="{CompiledBinding SelectedDate}" />
                                             </Grid>
                                             <StackPanel>
