refactor(views||components): remove direct StringToBitMapConverter on Check-In/Out, ManageMembership, and Logging-Gym-Member dialog card views

--- a/Components/LogGymMemberDialog/LogGymMemberDialogCard.axaml
+++ b/Components/LogGymMemberDialog/LogGymMemberDialogCard.axaml
@@ -145,7 +145,7 @@
 														VerticalAlignment="Center"
 														HorizontalAlignment="Center"
 														Margin="8"
-														Source="{Binding MemberPicturePath, Converter={StaticResource StringToBitMapConverter}}"/>
+														Source="{CompiledBinding MemberPicturePath}"/>
 												</Border>
 											</DataTemplate>
 										</DataGridTemplateColumn.CellTemplate>
