refactor(components): inherit AvatarSource of ManageMemberModel instead of plain MemberPicturePath<string>

--- a/Components/LogGymMemberDialog/LogGymMemberDialogCard.axaml
+++ b/Components/LogGymMemberDialog/LogGymMemberDialogCard.axaml
@@ -145,7 +145,7 @@
 														VerticalAlignment="Center"
 														HorizontalAlignment="Center"
 														Margin="8"
-														Source="{CompiledBinding MemberPicturePath}"/>
+														Source="{CompiledBinding AvatarSource}"/>
 												</Border>
 											</DataTemplate>
 										</DataGridTemplateColumn.CellTemplate>
