refactor(components): make Binding complied instead of default bindings <EmployeeProfileImage>

--- a/Components/AddNewEmployeeDialog/AddNewEmployeeDialogCard.axaml
+++ b/Components/AddNewEmployeeDialog/AddNewEmployeeDialogCard.axaml
@@ -138,7 +138,7 @@
 									Name="EmployeeProfileImage"
 									Stretch="UniformToFill"
 									IsVisible="True"
-									Source="{Binding ProfileImageSource}"/>
+									Source="{CompiledBinding ProfileImageSource}"/>
 								<!--new binds-->
 								<!-- Profile image placeholder -->
 							</Border>
