--- a/Components/EmployeeProfile/EmployeeProfileInformationView.axaml
+++ b/Components/EmployeeProfile/EmployeeProfileInformationView.axaml
@@ -83,7 +83,7 @@
 													Name="EmployeeProfileImage1"
 													Stretch="UniformToFill"
 													IsVisible="True"
-													Source="avares://AHON_TRACK/Assets/ManageEmployeesView/user-admin.png"/>
+													Source="{CompiledBinding SelectedEmployeeData.AvatarSource}"/>
 											</Border>
 
 											<!-- Username -->
