--- a/Components/EmployeeProfile/EmployeeProfileInformationView.axaml
+++ b/Components/EmployeeProfile/EmployeeProfileInformationView.axaml
@@ -464,7 +464,22 @@
 														</StackPanel>
 														<Separator Width="2000" Margin="0,20"/>
 
-														<!-- Barangay Row -->
+														<!-- Baranggay Row -->
+														<StackPanel Orientation="Horizontal">
+															<TextBlock
+																Text="Baranggay"
+																Classes="h4"
+																Width="150"
+																Foreground="{DynamicResource FontForeground}"/>
+															<TextBlock
+																Text="{CompiledBinding EmployeeBarangay}"
+																Classes="h5"
+																Margin="350,0"
+																Foreground="{DynamicResource FontForeground}"/>
+														</StackPanel>
+														<Separator Width="2000" Margin="0,20"/>
+														
+														<!-- City & Province Row -->
 														<StackPanel Orientation="Horizontal">
 															<TextBlock
 																Text="City &amp; Province"
