--- a/Views/ProductPurchaseView.axaml
+++ b/Views/ProductPurchaseView.axaml
@@ -64,7 +64,7 @@
             </Interaction.Behaviors>
             <StackPanel MaxWidth="{StaticResource PageMaxWidth}" Margin="90,40,48,24" Spacing="16">
                 <Grid ColumnDefinitions="* *" ColumnSpacing="30">
-                    <shadui:Card Grid.Column="0" VerticalAlignment="Top" MaxHeight="850">
+                    <shadui:Card Grid.Column="0" VerticalAlignment="Top" MaxHeight="855">
                         <StackPanel>
                             <shadui:CardTitle Content="Select a customer" />
                             <Grid ColumnDefinitions="Auto Auto" ColumnSpacing="10">
@@ -98,7 +98,7 @@
                                     <scroll:VerticalScrollViewerAnimatedBehavior ScrollStepSize="150"/>
                                 </Interaction.Behaviors>
                                 <DataGrid
-                                    Height="700"
+                                    Height="730"
                                     Width="695"
                                     IsReadOnly="True"
                                     CanUserReorderColumns="False"
@@ -130,7 +130,7 @@
                                             Binding="{CompiledBinding LastName}" />
                                         <DataGridTextColumn
                                             Width="Auto"
-                                            MinWidth="250"
+                                            MinWidth="243"
                                             Header="Customer Type"
                                             Binding="{CompiledBinding CustomerType}" />
                                     </DataGrid.Columns>
@@ -138,7 +138,7 @@
                             </ScrollViewer>
                         </StackPanel>
                     </shadui:Card>
-                    <shadui:Card Grid.Column="1" Margin="0,0,100,0" Height="822" VerticalAlignment="Top">
+                    <shadui:Card Grid.Column="1" Margin="0,0,90,0" MaxHeight="855" VerticalAlignment="Top">
                         <StackPanel Spacing="20">
                             <!-- Header -->
                             <shadui:CardTitle Content="Purchase Summary" />
@@ -162,12 +162,12 @@
                                         Text="{CompiledBinding CustomerFullName}"
                                         Classes="h4" />
                                     <TextBlock
-                                        Text="ID: GM-2025-001234"
+                                        Text="{CompiledBinding CurrentTransactionId, StringFormat='ID: {0}'}"
                                         Classes="Caption Muted"
                                         FontSize="15" />
                                 </StackPanel>
                             </StackPanel>
-                            <Separator Background="{StaticResource ForegroundColor}" />
+                            <Separator Background="{StaticResource ForegroundColor}" Margin="0,0,20,0" />
                             <StackPanel Spacing="10">
                                 <StackPanel Orientation="Horizontal" Spacing="15">
                                     <Svg
@@ -232,7 +232,7 @@
                                     </StackPanel>
                                 </Grid>
                             </StackPanel>
-                            <Separator Background="{StaticResource ForegroundColor}" />
+                            <Separator Background="{StaticResource ForegroundColor}" Margin="0,0,20,0" />
                             <StackPanel Spacing="10">
                                 <StackPanel Orientation="Horizontal" Spacing="15">
                                     <Svg
@@ -256,7 +256,7 @@
                                     Margin="0,40" />
                                 
                                 <!-- Cart items will go here -->
-                                <StackPanel Orientation="Vertical">
+                                <StackPanel Orientation="Vertical" Margin="0,0,20,0">
                                     <ItemsControl 
                                         ItemsSource="{CompiledBinding CartItems}"
                                         IsVisible="{CompiledBinding !IsCartEmpty}">
@@ -280,7 +280,7 @@
                                                             <Image
                                                                 Width="80"
                                                                 Height="80"
-                                                                Source="{CompiledBinding Poster}"
+                                                                Source="{CompiledBinding DisplayPoster}"
                                                                 Stretch="Uniform" />
                                                         </Border>
                                                         <StackPanel
@@ -348,16 +348,58 @@
                                     </ItemsControl>
                                 </StackPanel>
                             </StackPanel>
-                            <Separator Background="{StaticResource ForegroundColor}" />
+                            <Separator Background="{StaticResource ForegroundColor}" Margin="0,0,20,0"/>
                         </StackPanel>
                         <shadui:Card.Footer>
-                            <Button 
-                                Classes="Primary" 
-                                Content="{CompiledBinding FormattedTotalPrice, StringFormat='Pay {0}'}" 
-                                HorizontalAlignment="Right"
-                                Padding="15,0"
-                                Command="{CompiledBinding PaymentCommand}"
-                                IsEnabled="{CompiledBinding IsPaymentPossible}"/>
+                            <StackPanel Orientation="Vertical" Spacing="20">
+                                <Grid RowDefinitions="Auto" ColumnDefinitions="* *" IsVisible="{CompiledBinding IsPaymentPossible}">
+                                    <StackPanel Grid.Row="0" Grid.Column="0">
+                                        <TextBlock
+                                            Classes="h2"
+                                            FontWeight="Bold"
+                                            FontSize="25"
+                                            Text="Total Amount:"
+                                            VerticalAlignment="Center"/>
+                                    </StackPanel>
+                                    <StackPanel Grid.Row="0" Grid.Column="1" Margin="0,0,20,0">
+                                        <StackPanel Orientation="Vertical" HorizontalAlignment="Right">
+                                            <StackPanel>
+                                                <TextBlock
+                                                    Text="{CompiledBinding FormattedTotalPrice}"
+                                                    Foreground="{DynamicResource SuccessColor}"
+                                                    Classes="h2"/>
+                                            </StackPanel>
+                                        </StackPanel>
+                                    </StackPanel>
+                                </Grid>
+                                <StackPanel Margin="0,0,20,0">
+                                    <shadui:Card
+                                        Background="{DynamicResource PrimaryColor10}"
+                                        BorderThickness="0">
+                                        <StackPanel>
+                                            <TextBlock
+                                                Text="Important Note:"
+                                                Classes="Muted"
+                                                FontSize="18"
+                                                FontWeight="SemiBold"/>
+                                            <TextBlock
+                                                Text="• Strictly no refund/s"
+                                                Classes="Muted"
+                                                FontSize="16"
+                                                FontWeight="Medium"
+                                                Margin="30,10,0,0"/>
+                                        </StackPanel>
+                                    </shadui:Card>
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,20,0">
+                                    <Button 
+                                        Classes="Primary" 
+                                        Content="{CompiledBinding FormattedTotalPrice, StringFormat='Pay {0}'}" 
+                                        Padding="15,0"
+                                        Command="{CompiledBinding PaymentCommand}"
+                                        IsEnabled="{CompiledBinding IsPaymentPossible}"/>
+                                </StackPanel>
+                            </StackPanel>
                         </shadui:Card.Footer>
                     </shadui:Card>
                 </Grid>
