--- a/Components/AddNewMember/AddNewMemberView.axaml
+++ b/Components/AddNewMember/AddNewMemberView.axaml
@@ -207,6 +207,8 @@
                                     <NumericUpDown
                                         Value="{CompiledBinding MemberAge, Mode=TwoWay}"
                                         shadui:ControlAssist.Label="Age"
+                                        Minimum="1"
+                                        Maximum="100"
                                         ShowButtonSpinner="False"
                                         FormatString="N0"
                                         Watermark="Age"
